# ic_repo

./: README.md
Parte1/exercises/exercise1/results/: plot_histograms.py  plot_histograms_optimized.py  sample_left_bin1.txt  sample_left_bin16.txt  sample_left_bin4.txt  sample_mid_bin1.txt  sample_mid_bin16.txt  sample_mid_bin4.txt  sample_right_bin1.txt  sample_right_bin16.txt  sample_right_bin4.txt  sample_side_bin1.txt  sample_side_bin16.txt  sample_side_bin4.txt
Parte1/exercises/exercise1/src/: CMakeLists.txt  Makefile  channel_recovery_demo.cpp  wav_hist_extended.cpp  wav_hist_extended.h
Parte1/exercises/exercise2/: CMakeLists.txt  Makefile
Parte1/exercises/exercise2/results/: generate_histograms.py  plot_quantization_analysis.py  quantization_analysis.md
Parte1/exercises/exercise2/src/: audio_analyzer.cpp  wav_quant.cpp
Parte1/exercises/exercise3/: CMakeLists.txt  Makefile
Parte1/exercises/exercise3/results/: analyze_comparisons.py  comparison_sample_1bit_report.md  comparison_sample_2bit_report.md  comparison_sample_4bit_report.md  comparison_sample_8bit_report.md
Parte1/exercises/exercise3/src/: wav_cmp.cpp
Parte1/exercises/exercise4/: CMakeLists.txt  Makefile
Parte1/exercises/exercise4/results/: analyze_effects.py  effects_analysis_report.md
Parte1/exercises/exercise4/src/: AmplitudeModulationEffect.cpp  AmplitudeModulationEffect.h  AudioEffect.cpp  AudioEffect.h  AudioEffectFactory.cpp  ChorusEffect.cpp  ChorusEffect.h  EchoEffect.cpp  EchoEffect.h  MultiEchoEffect.cpp  MultiEchoEffect.h  ReverbEffect.cpp  ReverbEffect.h  wav_effects.cpp
Parte1/sndfile-example/src/: CMakeLists.txt  wav_hist.cpp  wav_hist.h
Parte2/bit_stream/src/: CMakeLists.txt  bin2text.cpp  bit_stream.cpp  bit_stream.h  byte_stream.cpp  byte_stream.h  text2bin.cpp  wav_quant_dec.cpp  wav_quant_dec.h  wav_quant_enc.cpp  wav_quant_enc.h
Parte2/bit_stream/test/: bin-bits  texto_em_bits_out.txt
Parte3/bit_stream/bit_stream/: ANALISE_RESULTADOS.md  CORRECAO_WAV.md  IMPLEMENTATION_SUMMARY.md  build.ps1  build_simple.ps1  test_codec.ps1
Parte3/bit_stream/bit_stream/src/: CMakeLists.txt  Makefile.windows  dct_codec.cpp  dct_codec.h  dct_decoder.cpp  dct_encoder.cpp  dct_test.cpp
